# bedroom-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yaml  docker-compose.yml  llm.service  pyproject.toml
apps/bedroom-agent/: .env.example  Dockerfile  README.md  dev-check.sh  docker-compose.yml  pyproject.toml
apps/bedroom-agent/src/: app.py
apps/bedroom-agent/src/agent/: actions.py  decision_engine.py  intent_registry.py  mqtt_listener.py  nl_router.py  orchestrator.py  policies.py  runner.py  status_service.py  tool_behaviors.py
apps/bedroom-agent/src/contracts/: ha.py  mqtt.py  policy.py
apps/bedroom-agent/src/core/: config.py  cooldowns.py  idempotency.py  logging_jsonl.py  time.py
apps/bedroom-agent/src/llm/: base.py  factory.py  mistral_client.py  ollama_client.py  openai_client.py
apps/bedroom-agent/src/memory/: __init__.py  preference_feedback.py  sqlite_kv.py  tiered_memory.py
apps/bedroom-agent/src/reliability/: circuit_breaker.py  deadline.py
apps/bedroom-agent/tests/: test_agent_actions.py  test_app_runtime_state.py  test_breaker.py  test_contracts.py  test_cooldowns.py  test_deadline_budget.py  test_decision_engine.py  test_episode_recording.py  test_failure_injection.py  test_ha_real_client_climate.py  test_idempotency.py  test_llm_client.py  test_mistral_client.py  test_mqtt_listener.py  test_nl_router.py  test_preference_feedback.py  test_retry.py  test_room_analyzer.py  test_runner_breaker.py  test_runner_degradation.py  test_scene_orchestrator.py  test_scene_policies.py  test_status_service.py  test_tiered_memory.py  test_tool_behaviors.py
mock_ha/: app.py  (+1 more)
(+77 files in other folders)
