[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bedroom-agent"
version = "0.0.1"
description = "Bedroom-first edge agent: contracts, policy gate, logging, replay harness."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "PyYAML>=6.0.1",
    "requests>=2.31",
    "openai>=1.0.0",
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]
mock_ha = ["fastapi==0.110.0", "uvicorn[standard]==0.27.1"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
